[package]
name = "assert-call"
version = "0.0.1"
edition = "2021"
authors = ["frozenlib <frozenlib@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/frozenlib/assert-call"
documentation = "https://docs.rs/assert-call/"
keywords = ["assert"]
categories = ["development-tools::testing"]
description = "A small utility for testing to verify that the expected parts of the code are called in the expected order."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yansi = { version = "1.0.0-rc.1", features = ["detect-tty", "detect-env"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
