[package]
name = "assert-call"
version = "0.1.1"
edition = "2024"
authors = ["frozenlib <frozenlib@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/frozenlib/assert-call"
documentation = "https://docs.rs/assert-call/"
keywords = ["assert", "mock"]
categories = ["development-tools::testing"]
description = "A tool for testing that ensures code parts are called as expected."
include = ["/src/**"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yansi = { version = "1.0.1", features = ["detect-tty", "detect-env"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
